Add country in H1 title

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <main>
     <div>
       <div>
-        <h1>Hi, I'm Seyram.<br><span>A UX Designer based in Toronto</span></h1>
+        <h1>Hi, I'm Seyram.<br><span>A UX Designer based in Toronto, Canada</span></h1>
         <p> I'm passionate about bridging the gap between people's needs and well-designed technologically feasible solutions.</p>
       </div>
     </div>
