Update grammar in paragraph

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
             <p>I always knew I wanted to be an artist or a designer of some kind growing up. I discovered UX and UI design after my final year in university (Joint Hons. in Communication & Sociology), and I fell in love with the design thinking
               process. I enrolled myself in Career Foundry's UX Design program because I wanted to well-position myself within the design space to learn (and continue learning) and contribute as much as I can (and it's been great thus far!).</p>
             <h4>What Are You Passionate About?</h4>
-            <p>As UX Designers, "our mission is to listen. Our goal is to understand the complexity of systems we create and the people that use them. Our work is inspired by humans and created for humans to improve the human condition” (Career
+            <p>As UX Designers, "our mission is to listen. Our goal is to understand the complexity of the systems we create and the people that use them. Our work is inspired by humans and created for humans to improve the human condition” (Career
               Foundry). I'm passionate about creating appealing and usable designs for people. Before I decided on the UX career path, I wanted to be a UI designer focused solely on interface design. After testing some of my attractive designs on
               friends and family, I realized if people can't accomplish their goals, or navigate the UI then it results in a negative user experience. UX attempts to understand a person's needs and then delivers a product that addresses those
               specific issues. The focus goes beyond visuals, and I love that.</p>
