--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </picture>
       <nav>
         <ul>
-          <li><a href="index.html">Work</a></li>
+          <li><a href="index.html">Projects</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><a href="files/seyram-kudolo-resume.pdf">Resume</a></li>
