--- a/about.html
+++ b/about.html
@@ -20,8 +20,9 @@
       </picture>
       <nav>
         <ul>
-          <li><a href="index.html">Work</a></li>
+          <li><a href="index.html">Projects</a></li>
           <li><a href="about.html">About</a></li>
+          <li><a href="files/seyram-kudolo-resume.pdf">Resume</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -111,10 +112,13 @@
   </main>
   <footer id="contact">
     <div>
-      <h2>Get in Touch</h2>
-      <p>Like what you see? Get in touch with me by phone at <a href="tel:1234567890">1234567890.</a> Prefer to email?</p>
+      <h2>Like What You See?</h2>
+      <p>Get in touch with me by phone at <a href="tel:1234567890">1234567890</a>.</p>
       <div>
-        <a href="mailto:google@gmail.com">Email Me</a>
+        <p>Prefer to email?</p>
+        <div>
+          <a href="mailto:google@gmail.com">Email Me</a>
+        </div>
       </div>
       <div>
         <a href="https://www.linkedin.com/in/seyram-kudolo/" target="_blank"><svg height="67px" id="Layer_1" style="enable-background:new 0 0 67 67;" version="1.1" viewBox="0 0 67 67" width="67px" xml:space="preserve"
