--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <ul>
           <li><a href="index.html">Projects</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#contact">Contact</a></li>
           <li><a href="files/seyram-kudolo-resume.pdf">Resume</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -57,7 +57,7 @@
             <h3>Enunciate</h3>
             <p>Research has shown that one of the reasons young people abandon their goal to learn a new language/vocabulary is due to lack of time. Enunciate is an app designed to empower young people to learn new vocabulary by incorporating short
               lessons into their daily schedules. </p>
-            <a href="#">View Case Study</a>
+            <a href="enunciate.html">View Case Study</a>
           </div>
           <!--end of text column-->
         </div>
@@ -109,10 +109,13 @@
   </main>
   <footer id="contact">
     <div>
-      <h2>Get in Touch</h2>
-      <p>Like what you see? Get in touch with me by phone at <a href="tel:1234567890">1234567890.</a> Prefer to email?</p>
+      <h2>Like What You See?</h2>
+      <p>Get in touch with me by phone at <a href="tel:1234567890">1234567890</a>.</p>
       <div>
-        <a href="mailto:google@gmail.com">Email Me</a>
+        <p>Prefer to email?</p>
+        <div>
+          <a href="mailto:google@gmail.com">Email Me</a>
+        </div>
       </div>
       <div>
         <a href="https://www.linkedin.com/in/seyram-kudolo/" target="_blank"><svg height="67px" id="Layer_1" style="enable-background:new 0 0 67 67;" version="1.1" viewBox="0 0 67 67" width="67px" xml:space="preserve"
