Apply stylesheet to pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     Seyram Kudolo | UX Designer
   </title>
   <link rel="shortcut icon" href="img/favicon.io">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
 <body>
