--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     About Seyram Kudolo
   </title>
   <link rel="shortcut icon" href="img/favicon.io">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
 <body>
