--- a/enunciate.html
+++ b/enunciate.html
@@ -7,6 +7,7 @@
     Project | Enunciate
   </title>
   <link rel="shortcut icon" href="img/favicon.io">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
