Add viewport meta

--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -65,7 +66,7 @@
               friends and family, I realized if people can't accomplish their goals, or navigate the UI then it results in a negative user experience. UX attempts to understand a person's needs and then delivers a product that addresses those
               specific issues. The focus goes beyond visuals, and I love that.</p>
             <h4>What Do You Do Outside Of Work?</h4>
-            <p>If you can't find me designing at my computer, I'm definitely watching The Office on Netflix or socializing with friends and family😊.</p>
+            <p>If you can't find me designing at my computer, I'm definitely watching The Office on Netflix or socializing with friends and family 😊.</p>
             <a href="files/seyram-kudolo-resume.pdf" target="_blank">Download my Resume</a>
           </div>
           <!--end of 'my story' section-->
