Open link in new tab

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <!--open column for text-->
             <h3>Dig-IT</h3>
             <p>Dig-IT is a HelpAge Canada program that offers devices, data, education, and technical support for low-income Canadian seniors to join the digital world.</p>
-            <a href="https://seniorsdig-it.ca/">View Website</a>
+            <a href="https://seniorsdig-it.ca/" target="_blank">View Website</a>
           </div>
           <!--end of text column-->
         </div>
