Add button class to html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h3>Enunciate</h3>
             <p>Research has shown that one of the reasons young people abandon their goal to learn a new language/vocabulary is due to lack of time. Enunciate is an app designed to empower young people to learn new vocabulary by incorporating short
               lessons into their daily schedules. </p>
-            <a href="enunciate.html">View Case Study</a>
+            <a href="enunciate.html" class="button">View Case Study</a>
           </div>
           <!--end of text column-->
         </div>
@@ -84,7 +84,7 @@
             <h3>QuikPay</h3>
             <p>Ghana is one of the fasted developing nations in West Africa, but security in the financial transaction system leaves much to be desired. QuikPay is a secure financial web app designed to inspire confidence in the way Ghanaians
               perform financial transactions.</p>
-            <a href="#">View Case Study</a>
+            <a href="#" class="button">View Case Study</a>
           </div>
           <!--end of text column-->
         </div>
@@ -103,7 +103,7 @@
             <!--open column for text-->
             <h3>Dig-IT</h3>
             <p>Dig-IT is a HelpAge Canada program that offers devices, data, education, and technical support for low-income Canadian seniors to join the digital world.</p>
-            <a href="https://seniorsdig-it.ca/" target="_blank">View Website</a>
+            <a href="https://seniorsdig-it.ca/" target="_blank" class="button">View Website</a>
           </div>
           <!--end of text column-->
         </div>
