Add button state styles

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
               specific issues. The focus goes beyond visuals, and I love that.</p>
             <h4>What Do You Do Outside Of Work?</h4>
             <p>If you can't find me designing at my computer, I'm definitely watching The Office on Netflix or socializing with friends and family 😊.</p>
-            <a href="files/seyram-kudolo-resume.pdf" target="_blank">Download my Resume</a>
+            <a href="files/seyram-kudolo-resume.pdf" target="_blank" class="button">Download my Resume</a>
           </div>
           <!--end of 'my story' section-->
           <div>
@@ -123,7 +123,7 @@
       <div>
         <p>Prefer to email?</p>
         <div>
-          <a href="mailto:google@gmail.com">Email Me</a>
+          <a href="mailto:google@gmail.com" class="button contact">Email Me</a>
         </div>
       </div>
       <div>
