--- a/enunciate.html
+++ b/enunciate.html
@@ -367,7 +367,7 @@
       <div>
         <p>Prefer to email?</p>
         <div>
-          <a href="mailto:google@gmail.com">Email Me</a>
+          <a href="mailto:google@gmail.com" class="button contact">Email Me</a>
         </div>
       </div>
       <div>
