--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div>
         <p>Prefer to email?</p>
         <div>
-          <a href="mailto:google@gmail.com">Email Me</a>
+          <a href="mailto:google@gmail.com" class="button contact">Email Me</a>
         </div>
       </div>
       <div>
