Add class 'container' to sections

--- a/about.html
+++ b/about.html
@@ -17,12 +17,12 @@
 
 <body>
   <header>
-    <div>
+    <div class="container">
       <picture>
         <a href="index.html">
-          <source srcset="img/logo@1.png" media="(max-width:767px)">
+          <source srcset="img/logo@1.png" media="(max-width:767px)" class="logo">
         </a>
-        <a href="index.html"><img src="img/logo@2.png" alt="Logo"></a>
+        <a href="index.html"><img src="img/logo@2.png" alt="Logo" class="logo"></a>
       </picture>
       <nav>
         <ul>
@@ -38,7 +38,7 @@
   <main>
     <!--this is the About heading-->
     <div>
-      <div>
+      <div class="container">
         <h1>About</h1>
       </div>
     </div>
@@ -46,7 +46,7 @@
     <!--beginning of second section with page content-->
     <div>
       <!--main section-->
-      <div>
+      <div class="container">
         <!--container/wrapper-->
         <picture>
           <source srcset="img/seyram@1.jpeg" media="(max-width:767px)">
@@ -117,7 +117,7 @@
     <!--end of section with page content-->
   </main>
   <footer id="contact">
-    <div>
+    <div class="container">
       <h2>Like What You See?</h2>
       <p>Get in touch with me by phone at <a href="tel:1234567890">1234567890</a>.</p>
       <div>
