--- a/enunciate.html
+++ b/enunciate.html
@@ -17,12 +17,12 @@
 
 <body>
   <header>
-    <div>
+    <div class="container">
       <picture>
         <a href="index.html">
-          <source srcset="img/logo@1.png" media="(max-width:767px)">
+          <source srcset="img/logo@1.png" media="(max-width:767px)" class="logo">
         </a>
-        <a href="index.html"><img src="img/logo@2.png" alt="Logo"></a>
+        <a href="index.html"><img src="img/logo@2.png" alt="Logo" class="logo"></a>
       </picture>
       <nav>
         <ul>
@@ -39,7 +39,7 @@
     <!--beginning of main section for image-->
     <div>
       <!-- beginning of container for image-->
-      <div>
+      <div class="container">
         <picture>
           <source srcset="img/enunciate/main-image@1.png" media="(max-width:767px)">
           <img src="img/enunciate/main-image@2.png" alt="Enunciate Image and Prototype">
@@ -48,7 +48,7 @@
       <!--end of main section for image-->
     </div>
     <!--begining of enunciate content section-->
-    <div>
+    <div class="container">
       <!--beginning of enunciate section container-->
       <div>
         <!--beginning of page navigation-->
@@ -361,7 +361,7 @@
       </div>
   </main>
   <footer id="contact">
-    <div>
+    <div class="container">
       <h2>Like What You See?</h2>
       <p>Get in touch with me by phone at <a href="tel:1234567890">1234567890</a>.</p>
       <div>
