--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
 <body>
   <header>
-    <div>
+    <div class="container">
       <picture>
         <a href="index.html">
-          <source srcset="img/logo@1.png" media="(max-width:767px)">
+          <source srcset="img/logo@1.png" media="(max-width:767px)" class="logo">
         </a>
-        <a href="index.html"><img src="img/logo@2.png" alt="Logo"></a>
+        <a href="index.html"><img src="img/logo@2.png" alt="Logo" class="logo"></a>
       </picture>
       <nav>
         <ul>
@@ -36,20 +36,20 @@
   </header>
   <!--begining of hero section-->
   <main>
-    <div>
-      <div>
+    <div id="hero">
+      <div class="container">
         <h1>Hi, I'm Seyram.<br><span>A UX Designer based in Toronto, Canada</span></h1>
         <p> I'm passionate about bridging the gap between people's needs and well-designed technologically feasible solutions.</p>
       </div>
     </div>
     <!--end of hero section-->
     <!--beginning of whole 'My Work' section block-->
-    <div>
-      <div>
+    <div id="work">
+      <div class="container">
         <!--container for 'My Work' section-->
         <h2>My Work</h2>
         <!--open row for 2 columns for Enunciate-->
-        <div>
+        <div class="row">
           <div>
             <!--left column with image-->
             <picture>
@@ -70,7 +70,7 @@
         <!--end of row that holds 2 columns for Enunciate-->
 
         <!--open row for 2 columns for QuikPay-->
-        <div>
+        <div class="row">
           <div>
             <!--left column with image-->
             <picture>
@@ -90,7 +90,7 @@
         </div>
         <!--end of row that holds 2 columns for QuikPay-->
         <!--open row for 2 columns for Dig-IT-->
-        <div>
+        <div class="row">
           <div>
             <!--left column with image-->
             <picture>
@@ -114,7 +114,7 @@
     <!--end of whole 'My Work' section block-->
   </main>
   <footer id="contact">
-    <div>
+    <div class="container">
       <h2>Like What You See?</h2>
       <p>Get in touch with me by phone at <a href="tel:1234567890">1234567890</a>.</p>
       <div>
