Add ID to copyright

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul>
           <li><a href="index.html">Projects</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="files/seyram-kudolo-resume.pdf">Resume</a></li>
+          <li><a href="files/seyram-kudolo-resume.pdf" target="_blank">Resume</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -131,7 +131,7 @@
               style="fill-rule:evenodd;clip-rule:evenodd;fill:#007AB9;" />
           </svg></a>
       </div>
-      <p>COPYRIGHT SEYRAM-KUDOLO 2021</p>
+      <p id="copyright">COPYRIGHT SEYRAM-KUDOLO 2021</p>
     </div>
   </footer>
 </body>
