--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
+<body id="about">
   <header>
     <div class="container">
       <picture>
@@ -73,9 +73,9 @@
           <div>
             <!--beginning of 'tools' section-->
             <h2>Skills & Tools</h2>
-            <div>
+            <div class="row" id="skills">
               <!--beginning of 'relevant skills' and 'tools' container-->
-              <div>
+              <div class="col-md-6">
                 <!--beginning of relevant skills-->
                 <h3>Relevant Skills</h3>
                 <ul>
@@ -90,7 +90,7 @@
                 </ul>
               </div>
               <!--end of relevant skills-->
-              <div>
+              <div class="col-md-6" id="tools">
                 <!--beginning of 'tools'-->
                 <h3>My Toolkit</h3>
                 <h4>Design & Prototyping</h4>
@@ -116,6 +116,7 @@
     </div>
     <!--end of section with page content-->
   </main>
+  <br>
   <footer id="contact">
     <div class="container">
       <h2>Like What You See?</h2>
