--- a/index.html
+++ b/index.html
@@ -1427,6 +1427,7 @@
       <p id="copyright">COPYRIGHT SEYRAM-KUDOLO 2021</p>
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
 </body>
 
