--- a/index.html
+++ b/index.html
@@ -6,18 +6,26 @@
   <title>
     Seyram Kudolo | UX Designer
   </title>
+  <!--favicon-->
   <link rel="shortcut icon" href="img/favicon.io" />
+  <!--normalize cdn-->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+  <!--montserrat (google) font-->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <!--css stylesheet-->
   <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <!--fontawesome icons-->
+  <script src="https://kit.fontawesome.com/c89f8c4219.js" crossorigin="anonymous"></script>
+  <!--responsiveness-->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
 <body>
   <header>
     <div class="container">
+      <div class="navtoggle" id="myNavtoggle">
       <picture>
         <a href="index.html">
           <source srcset="img/logo@1.png" media="(max-width:767px)" class="logo" />
@@ -32,6 +40,7 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
+    </div>
     </div>
   </header>
   <!--begining of hero section-->
