--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
           <li><a href="index.html">Projects</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="files/seyram-kudolo-resume.pdf" target="_blank">Resume</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+          <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
         </ul>
       </nav>
     </div>
