Show mobile menu on all pages

--- a/about.html
+++ b/about.html
@@ -25,21 +25,23 @@
 <body id="about">
   <header>
     <div class="container">
+      <div class="navtoggle" id="myNavtoggle">
       <picture>
         <a href="index.html">
-          <source srcset="img/logo@1.png" media="(max-width:767px)" class="logo">
+          <source srcset="img/logo@1.png" media="(max-width:767px)" class="logo" />
         </a>
-        <a href="index.html"><img src="img/logo@2.png" alt="Logo" class="logo"></a>
+        <a href="index.html"><img src="img/logo@2.png" alt="Logo" class="logo" /></a>
       </picture>
       <nav>
         <ul>
           <li><a href="index.html">Projects</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="files/seyram-kudolo-resume.pdf" target="_blank">Resume</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
           <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
         </ul>
       </nav>
+    </div>
     </div>
   </header>
   <!--begining of hero section-->
@@ -146,6 +148,8 @@
       <p id="copyright">COPYRIGHT SEYRAM-KUDOLO 2021</p>
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
