reduce text on home page for project summary

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <!--open column for text-->
             <h3>Enunciate</h3>
             <p>
-              Research has shown that one of the reasons young people abandon their goal to learn a new language/vocabulary is due to lack of time. Enunciate is an app designed to empower young people to learn new
+              Enunciate is an app designed to empower young people to learn new
               vocabulary by incorporating short lessons into their daily schedules.
             </p>
             <a href="enunciate.html" class="button">View Case Study</a>
