Reduce text fro project summary on homepage

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <!--open column for text-->
             <h3>QuikPay</h3>
             <p>
-              Ghana is one of the fastest developing nations in West Africa, but security in the financial transaction system leaves much to be desired. QuikPay is a secure financial web app designed to inspire confidence
+              QuikPay is a secure financial web app designed to inspire confidence
               in the way Ghanaians perform financial transactions.
             </p>
             <a href="#" class="button">View Case Study</a>
